tests/error/experimental_errors/function_tensor.err
Error: Experimental feature (at $FILE:19:11)
   | 
17 | @guppy(module)
18 | def main() -> tuple[int, int]:
19 |     return (f, g)(1, 2)
   |            ^^^^^^ Function tensors are an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Guppy compilation failed due to 1 previous error
